@@ -1,3 +1,11 @@
 CKEDITOR.plugins.setLang("geshi","de",{
-    	title: 'Geshi Snippet oder Block'
+    	title: 'Geshi Snippet oder Block',
+        lang: 'Sprache',
+        which: 'Code-Schnippsel?',
+        codeblock: 'Code-Schnippsel',
+        snippet: 'Herunterladbarer Code-Schnippsel',
+        lang_empty: 'Das Sprach-Feld darf nicht leer sein.',
+        code: 'Text für Code-Schnippsel',
+        code_empty: 'Code-Schnippsels erforderlich.',
+        file: 'Dateiname des Code-Schnippsels',
 });
